test_dev/qasm/syntax_errors/e42.qasm
// bad barrier, bad arguments

barrier a, 2;
